# Calculator

./: CMakeLists.txt  Calculator.cpp  Calculator.hpp  FloatNode.hpp  FunctionToken.cpp  FunctionToken.hpp  InfixOpNode.cpp  InfixOpNode.hpp  Node.hpp  NumberToken.hpp  OperatorToken.hpp  Operators.hpp  Parser.hpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  readme.md
src/: BracketToken.cpp  BracketToken.hpp  FloatNode.cpp  FloatNode.hpp  Function.hpp  FunctionNode.cpp  FunctionNode.hpp  FunctionToken.cpp  FunctionToken.hpp  Globals.hpp  InfixOpNode.cpp  InfixOpNode.hpp  LBracketToken.cpp  LBracketToken.hpp  Matrix.hpp  Node.hpp  NumberToken.cpp  NumberToken.hpp  OperandNode.hpp  OperatorNode.cpp  OperatorNode.hpp  OperatorToken.cpp  OperatorToken.hpp  Parser.cpp  Parser.hpp  RBracketToken.cpp  RBracketToken.hpp  Term.hpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  UnaryNode.cpp  UnaryNode.hpp  main.cpp
